# Automated-Planning

./: .gitignore  README.md  test_generate_all.ipynb  test_interactive.ipynb
Optic/: run-cmake-for-cplex-static-x86
Project/: .~lock.tests.ods#  Dockerfile  README  domain_flt.pddl  interactive_test.ipynb  notebook.ipynb  test_done_for_planner  test_generate_all.ipynb  test_interactive.ipynb  test_problems.ipynb  tests.ods
Project/hddl_test/: domain.hddl  problem.hddl
Project/pddl_tester/: domain.pddl  pddl_tester.ipynb  problem.pddl  sas_plan
Project/problem_1/: domain.pddl  problem.pddl
Project/src/: entities.py  environment_generator.py  environment_toPddl.py  functions.py
src/: entities.py  environment_generator.py  environment_toPddl.py  functions.py
task_problems/problem_1/: environment_configurations.py
task_problems/problem_5/: Dockerfile  (+1 more)
task_problems/problem_5/p5_pkg/: CMakeLists.txt
task_problems/problem_5/p5_pkg/install/p5_pkg/lib/p5_pkg/: fill_box_action_node  leave_box_action_node  move_action_node
task_problems/problem_5/p5_pkg/install/p5_pkg/share/ament_index/resource_index/parent_prefix_path/: p5_pkg
task_problems/problem_5/p5_pkg/install/p5_pkg/share/p5_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh
task_problems/problem_5/p5_pkg/install/p5_pkg/share/p5_pkg/cmake/: ament_cmake_export_dependencies-extras.cmake
task_problems/problem_5/p5_pkg/install/p5_pkg/share/p5_pkg/launch/: commands  p5_pkg_launch.py
task_problems/problem_5/p5_pkg/launch/: commands
task_problems/problem_5/p5_pkg/log/: latest_build
task_problems/problem_5/p5_pkg/src/: fill_box_action_node.cpp  load_box_action_node.cpp  move_action_node.cpp
(+170 files in other folders)
